fixed spacing to make mobile look better

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -11,18 +11,18 @@ html {
 
 h1 {
     color: rgb(4, 4, 4);
-    font-size: 115px;
+    font-size: 90px;
     font-family: "Brush Script M7", cursive;
     font-weight: 300;
     text-align: center;
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 20px;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: beige;
-    border: 62px ridge lightcoral;
+    border: 13px ridge lightcoral;
     display: flex;
     flex-direction: column;
 }
@@ -36,10 +36,10 @@ a {
 
 img {
     height: auto;
-    width: 350px;
+    width: 300px;
     justify-content: center;
     align-content: center;
-    border: 65px double #a4d1d59d;
+    border: 15px double #a4d1d59d;
 }
 
 ul {
