--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,14 @@ html {
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: beige;
-    border: 62px ridge lightcoral;
-    width: 100% vw;
+    border: 13px ridge lightcoral;
     display: flex;
     flex-direction: column;
 }
 
 h1 {
     color: rgb(6, 5, 5);
-    font-size: 150px;
+    font-size: 90px;
     font-family: "Brush Script M7", cursive;
     font-weight: 300;
     border-left: lightcoral;
@@ -38,7 +37,7 @@ a {
 ul {
     color:black;
     text-align: center;
-    font-size: 65px;
+    font-size: 55px;
     list-style-type: none;
     border-bottom: 25px rgb(69, 234, 234);
     margin: 10px;
@@ -47,9 +46,9 @@ ul {
 
 img {
     height: auto;
-    width: 350px;
+    width: 300px;
     align-content: center;
-    border: 65px double #a4d1d59d;
+    border: 15px double #a4d1d59d;
     width: 100% vw;
 }
 
